feat: aded create schema UI
